# sigi

./: Cargo.toml  LICENSE  NOTES.md  README.md  build.sh  index.html  pkg-descr  pkg-list  shard.yml  sigi.1  test.bats
.diffs/: sigi.diff
.github/workflows/: cargo-build.yml  release.yml
Formula/: sigi.rb
port-src/: Makefile  distinfo
sketch/: rank-interface.md
spec/: rank_spec.cr  spec_helper.cr
src/: actions.rs  cli.rs  cli_v2.rs  data.rs  effects.rs  gui.rs  lib.rs  main.rs  output.rs  rank.cr  sigi.rs
src/cli/: interact.rs
src/effects/: housekeeping.rs  lifecycle.rs  shuffle.rs  views.rs
src/sigi/: actions.rs  cli.rs  data.rs  items.rs
tests/: abcd_tests.rs  basic-synchronous-tests.bats  basic_sigi_tests.rs  empty_stack_tests.rs  interactive_tests.rs  run_bats_tests.rs  run_sigi.rs  single_item_tests.rs  test.bats
