[package]
name = "sigi"
version = "3.0.1-beta"
authors = ["J.R. Hill <hiljusti@so.dang.cool>"]
edition = "2021"
license = "GPL-2.0-only"
description = "Sigi: An organizing tool and no-frills stack database."
readme = "README.md"
homepage = "https://github.com/hiljusti/sigi"
repository = "https://github.com/hiljusti/sigi"
documentation = "https://docs.rs/sigi"
keywords = ["organization", "planning", "stack", "todo", "cli"]
categories = ["command-line-interface", "database-implementations"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[dependencies]
chrono = { version = "0.4", features = [ "serde", "unstable-locales" ] }
clap = "3.1.5"
json = "0.12.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
