[package]
name = "sigi"
version = "3.6.1"
authors = ["J.R. Hill <justin@so.dang.cool>"]
edition = "2021"
license = "GPL-2.0-only"
description = "An organizing tool for terminal lovers who hate organizing"
readme = "README.md"
homepage = "https://github.com/sigi-cli/sigi"
repository = "https://github.com/sigi-cli/sigi"
documentation = "https://docs.rs/sigi"
keywords = ["organization", "planning", "stack", "todo", "cli"]
categories = ["command-line-interface"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[dependencies]
chrono = { version = "0.4", features = [ "serde", "unstable-locales" ] }
clap = { version = "4.0", features = [ "derive" ] }
clearscreen = "2.0"
directories = "4.0"
json = "0.12.4"
rustyline = "11.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
